src/htdocs/css/_summaryPane.scss
@use 'variables' as *;

#summaryPane {
  transition: margin $sidebar-toggle-duration ease;

  h2 + p {
    margin-bottom: 2rem;
  }

  h3 {
    margin-top: 2.25rem;
  }

  #updated {
    display: none;
    padding: 1rem var(--padding-gutter);

    &:before {
      content: 'Updated: ';
    }
  }

  .bubble {
    display: inline-block;
  }

  .content {
    display: flex;
    flex-direction: column;
  }

  /* Rendering order of Features */

  .mainshock {
    order: 0;

    h2 {
      margin-top: .25rem;
    }
  }

  .aftershocks {
    order: 1;
  }

  .foreshocks {
    order: 2
  }

  .historical {
    order: 3;
  }
}

body.mainshock {
  #updated {
    display: block !important;
  }
}

